--- a/src/NotesList.css
+++ b/src/NotesList.css
@@ -5,3 +5,8 @@
 .grid-column {
     margin-top: 20px !important;
 }
+
+.initial-card {
+    margin-top: 200px !important;
+    margin-right: 45px !important;
+}
